test/error/StSwitchCaseNotConst.fu
public static class Test
{
	public static bool Run()
	{
		int x = 42;
		switch (x) {
		case x: //ERROR: Expected constant value
			return false;
		default:
			return false;
		}
	}
}
